--- a/FußballManager/Properties/Resources.resx
+++ b/FußballManager/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="fussball-fussball-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fussball-fussball-logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="joshua" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\joshua.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
